# searcherbot

./: .gitignore  README.md
searcherbot/: CHANGELOG.rst  CMakeLists.txt  package.xml
searcherbot_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
searcherbot_bringup/launch/: generate_map.launch  sim_robot.launch  spawn.launch  world.launch
searcherbot_bringup/models/stage1/: model.config  model.sdf
searcherbot_bringup/models/stage2/: model.config  model.sdf
searcherbot_bringup/world/: stage1.world  stage2.world
searcherbot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
searcherbot_description/rviz/: searcherbot.rviz
searcherbot_description/urdf/: colors.urdf.xacro  searcherbot.urdf  searcherbot.xacro
searcherbot_description/urdf/sensors/: camera.urdf.xacro  laser.urdf.xacro
searcherbot_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
searcherbot_examples/bt_xml/: bumpgo.xml
searcherbot_examples/include/searcherbot_examples/bt/: MoveBaseActions.h  ScanAction.h
searcherbot_examples/src/: bumpgo.cpp
searcherbot_examples/src/searcherbot_examples/bt/: MoveBaseActions.cpp  ScanAction.cpp
searcherbot_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
searcherbot_navigation/include/searcherbot_navigation/: Navigator.h
searcherbot_navigation/launch/: gmapping.launch  navigation.launch
searcherbot_navigation/launch/includes/: gmapping.launch.xml  move_base.launch.xml
searcherbot_navigation/maps/: stage1.pgm
searcherbot_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
searcherbot_navigation/src/: navigation_node.cpp
searcherbot_navigation/src/searcherbot_navigation/: Navigator.cpp
