<?xml version="1.0"?>
<package format="2">
  <name>searcherbot</name>
  <version>0.0.0</version>
  <description>
    The searcherbot package.
    A simple robot that is able to navigate
    to perform search and transport tasks
  </description>

  <maintainer email="carlos2caminero@gmail.com">Carlos Caminero</maintainer>
  <license>Apache 2</license>
  <url type="repository">https://github.com/Carlosalpha1/searcherbot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
