<?xml version="1.0"?>
<package format="2">
  <name>searcherbot</name>
  <version>0.0.3</version>
  <description>
    It is a simple robot that is able
    to navigate to perform search and transport tasks
  </description>

  <maintainer email="carlos2caminero@gmail.com">Carlos Caminero</maintainer>
  <license>Apache 2</license>
  <url type="repository">https://github.com/Carlosalpha1/searcherbot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>searcherbot_description</exec_depend>
  <exec_depend>searcherbot_bringup</exec_depend>
  <exec_depend>searcherbot_navigation</exec_depend>
  <exec_depend>searcherbot_examples</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
