<?xml version="1.0"?>
<package format="2">
  <name>searcherbot_bringup</name>
  <version>0.0.2</version>
  <description>
    The searcherbot bringup package
    provides all required dependencies
    to start the nodes in the launch files
    and enjoying with Searcherbot.
    The main launch file is sim_robot.launch
  </description>

  <maintainer email="carlos2caminero@gmail.com">Carlos Caminero</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>searcherbot_navigation</exec_depend>
  <exec_depend>searcherbot_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>searcherbot_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>rviz</exec_depend>


  <export>
  </export>
</package>
